--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ footer a:hover {
   overflow: hidden;
   *zoom: 1;
   position: relative;
-  padding: 10px 0px 10px 70px;
+  padding: 10px 0px 0px 70px;
   border-top: 1px solid #d1d1d1;
 }
 /* line 139, style.scss */
@@ -202,7 +202,7 @@ footer a:hover {
 #tweets-container li.tweet .actions li {
   list-style-type: none;
   float: left;
-  padding: 0 10px 5px 0;
+  padding: 0 10px 0 0;
   font-size: 14px;
 }
 /* line 183, style.scss */
