--- a/styles/style.scss
+++ b/styles/style.scss
@@ -133,7 +133,7 @@ footer {
 	li.tweet {
 		@include clearfix;
 		position: relative;
-		padding: 10px 0px 0px 70px;
+		padding: 10px 10px 10px 70px;
 		border-top: 1px solid $tweet-border;
 	
 		.avatar {
@@ -209,7 +209,7 @@ footer {
 	}
 	
 	.tweet:first-child {
-		margin: 10px 0;
+		margin: 10px 0 0;
 	}
 }
 
