--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ footer a:hover {
   overflow: hidden;
   *zoom: 1;
   position: relative;
-  padding: 10px 0px 0px 70px;
+  padding: 10px 10px 10px 70px;
   border-top: 1px solid #d1d1d1;
 }
 /* line 139, style.scss */
@@ -232,7 +232,7 @@ footer a:hover {
 }
 /* line 211, style.scss */
 #tweets-container .tweet:first-child {
-  margin: 10px 0;
+  margin-top: 10px;
 }
 
 /* line 216, style.scss */
